<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:orientation="vertical">


    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/bus_logo"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:scaleType="fitCenter"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_username"
        android:textColor="@color/colorGray"
        android:textSize="20sp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_marginTop="50dp"
        />

    <EditText
        android:id="@+id/et_login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textColor="@color/colorWhite"
        android:padding="10dp"
        android:textCursorDrawable="@drawable/bg_cursor"
        android:background="@drawable/bg_login_ed"
        android:inputType="text"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_password"
        android:textColor="@color/colorGray"
        android:textSize="20sp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_marginTop="15dp"
        />

    <EditText
        android:id="@+id/et_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textColor="@color/colorWhite"
        android:padding="10dp"
        android:textCursorDrawable="@drawable/bg_cursor"
        android:background="@drawable/bg_login_ed"
        android:inputType="textPassword"/>


    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_btn_login"
        android:textColor="@color/colorWhite"
        android:padding="15dp"
        android:textSize="20sp"
        android:text="@string/btn_login"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_btn_register"
        android:textColor="@color/colorWhite"
        android:padding="15dp"
        android:textSize="20sp"
        android:text="@string/btn_register"/>

    <TextView
        android:id="@+id/forget_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_pwd"
        android:textColor="@color/colorGray"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"/>

</LinearLayout>