<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_username"
                    android:textColor="@color/colorGray"
                    android:textSize="20sp"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"
                    android:layout_marginTop="30dp"
                    />

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:textColor="@color/colorWhite"
                    android:padding="10dp"
                    android:textCursorDrawable="@drawable/bg_cursor"
                    android:background="@drawable/bg_login_ed"
                    android:inputType="text"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_password"
                    android:textColor="@color/colorGray"
                    android:textSize="20sp"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"
                    android:layout_marginTop="20dp"
                    />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:textColor="@color/colorWhite"
                    android:padding="10dp"
                    android:textCursorDrawable="@drawable/bg_cursor"
                    android:background="@drawable/bg_login_ed"
                    android:inputType="textPassword"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/keyword"
                            android:textColor="@color/colorGray"
                            android:textSize="20sp"
                            android:paddingLeft="40dp"
                            android:layout_marginTop="20dp"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="（用于密码找回，务必牢记）"
                            android:textColor="@color/colorGray"
                            android:textSize="18sp"
                            android:layout_marginTop="20dp"
                            />
                </LinearLayout>


                <EditText
                    android:id="@+id/et_keyword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:textColor="@color/colorWhite"
                    android:padding="10dp"
                    android:textCursorDrawable="@drawable/bg_cursor"
                    android:background="@drawable/bg_login_ed"
                    android:inputType="textPassword"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register_realname"
                    android:textColor="@color/colorGray"
                    android:textSize="20sp"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"
                    android:layout_marginTop="20dp"
                    />

                <EditText
                    android:id="@+id/et_realname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:textColor="@color/colorWhite"
                    android:padding="10dp"
                    android:textCursorDrawable="@drawable/bg_cursor"
                    android:background="@drawable/bg_login_ed"
                    android:inputType="text"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register_idcard"
                    android:textColor="@color/colorGray"
                    android:textSize="20sp"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"
                    android:layout_marginTop="20dp"
                    />

                <EditText
                    android:id="@+id/et_idcard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:textColor="@color/colorWhite"
                    android:padding="10dp"
                    android:textCursorDrawable="@drawable/bg_cursor"
                    android:background="@drawable/bg_login_ed"
                    android:inputType="text"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register_phone_num"
                    android:textColor="@color/colorGray"
                    android:textSize="20sp"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"
                    android:layout_marginTop="20dp"
                    />

                <EditText
                    android:id="@+id/et_phonenum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:textColor="@color/colorWhite"
                    android:padding="10dp"
                    android:textCursorDrawable="@drawable/bg_cursor"
                    android:background="@drawable/bg_login_ed"
                    android:inputType="text"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register_email"
                    android:textColor="@color/colorGray"
                    android:textSize="20sp"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"
                    android:layout_marginTop="20dp"
                    />

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:textColor="@color/colorWhite"
                    android:padding="10dp"
                    android:textCursorDrawable="@drawable/bg_cursor"
                    android:background="@drawable/bg_login_ed"
                    android:inputType="textEmailAddress"
                    />

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/bg_btn_login"
                    android:textColor="@color/colorWhite"
                    android:padding="15dp"
                    android:textSize="20sp"
                    android:text="@string/btn_register"/>
        </LinearLayout>
</ScrollView>